Bug 195482 - Kontact crashes when I try to change the advanced archive settings
Summary: Kontact crashes when I try to change the advanced archive settings
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 248341 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-06 19:00 UTC by Mathias D
Modified: 2011-04-06 09:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.71 KB, text/plain)
2011-04-06 09:04 UTC, Martin Karing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias D 2009-06-06 19:00:23 UTC
Version:            (using KDE 4.2.4)
OS:                Linux
Installed from:    Ubuntu Packages

Kontact crashes when I try to configure like folling: "Kontact einrichten" --> "Erweiterte Einstellungen für den Nachrichtenbetrachter" and clicking on "Einrichten" right from Archive mode (it is the last menu point) It crashes every time i try it with the folling discription:

Anwendung: Kontact (kontact), Signal SIGABRT
0x00007fc6b83f8d21 in nanosleep () from /lib/libc.so.6

Thread 1 (Thread 0x7fc6be8a0750 (LWP 13945)):
[KCrash Handler]
#5  0x00007fc6b8383fb5 in raise () from /lib/libc.so.6
#6  0x00007fc6b8385bc3 in abort () from /lib/libc.so.6
#7  0x00007fc6b837cf09 in __assert_fail () from /lib/libc.so.6
#8  0x00007fc69919b877 in ?? () from /usr/lib/kde4/akregator_config_advanced.so
#9  0x00007fc69919b958 in ?? () from /usr/lib/kde4/akregator_config_advanced.so
#10 0x00007fc6b8fd81f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0x00007fc6ba1ad267 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#12 0x00007fc6b9f0adeb in ?? () from /usr/lib/libQtGui.so.4
#13 0x00007fc6b9f0ca52 in ?? () from /usr/lib/libQtGui.so.4
#14 0x00007fc6b9f0cca5 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#15 0x00007fc6b9bb98cf in QWidget::event () from /usr/lib/libQtGui.so.4
#16 0x00007fc6b9b6878d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#17 0x00007fc6b9b710da in QApplication::notify () from /usr/lib/libQtGui.so.4
#18 0x00007fc6baf9d84b in KApplication::notify () from /usr/lib/libkdeui.so.5
#19 0x00007fc6b8fc275c in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#20 0x00007fc6b9b70328 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#21 0x00007fc6b9bd9e19 in ?? () from /usr/lib/libQtGui.so.4
#22 0x00007fc6b9bd8a88 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#23 0x00007fc6b9c01464 in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007fc6b270920a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#25 0x00007fc6b270c8e0 in ?? () from /usr/lib/libglib-2.0.so.0
#26 0x00007fc6b270ca7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#27 0x00007fc6b8febe6f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#28 0x00007fc6b9c00bef in ?? () from /usr/lib/libQtGui.so.4
#29 0x00007fc6b8fc1002 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#30 0x00007fc6b8fc13cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#31 0x00007fc6b8fc3694 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#32 0x0000000000404a15 in _start ()
Comment 1 Christoph Feck 2009-06-06 19:40:06 UTC
Confirmed on current trunk. Backtrace:

Application: Kontact (kontact), signal: Aborted
[Current thread is 1 (Thread 0xb3f5b710 (LWP 6759))]

Thread 2 (Thread 0xafc0cb90 (LWP 6762)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb5565411 in select () from /lib/libc.so.6
#2  0xb63a9865 in QProcessManager::run (this=0x8078100) at /local/git/Qt/qt/src/corelib/io/qprocess_unix.cpp:296
#3  0xb62dc852 in QThreadPrivate::start (arg=0x8078100) at /local/git/Qt/qt/src/corelib/thread/qthread_unix.cpp:188
#4  0xb62461b5 in start_thread () from /lib/libpthread.so.0
#5  0xb556c3be in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb3f5b710 (LWP 6759)):
[KCrash Handler]
#6  0xffffe430 in __kernel_vsyscall ()
#7  0xb54c5990 in raise () from /lib/libc.so.6
#8  0xb54c72c8 in abort () from /lib/libc.so.6
#9  0xb54be78e in __assert_fail () from /lib/libc.so.6
#10 0xae37a499 in Akregator::SettingsAdvanced::slotConfigureStorage (this=0x8c442b8) at /local/svn/kde/trunk/KDE/kdepim/akregator/configuration/settings_advanced.cpp:82
#11 0xae37a52d in Akregator::SettingsAdvanced::qt_metacall (this=0x8c442b8, _c=QMetaObject::InvokeMetaMethod, _id=27, _a=0xbfc540f8)
    at /local/build/KDE/kdepim/akregator/configuration/settings_advanced.moc:70
#12 0xb63e0f48 in QMetaObject::activate (sender=0x8a9e500, from_signal_index=29, to_signal_index=30, argv=0xbfc540f8) at /local/git/Qt/qt/src/corelib/kernel/qobject.cpp:3077
#13 0xb63e13c8 in QMetaObject::activate (sender=0x8a9e500, m=0xb60d9f04, from_local_signal_index=2, to_local_signal_index=3, argv=0xbfc540f8) at /local/git/Qt/qt/src/corelib/kernel/qobject.cpp:3171
#14 0xb5ef0361 in QAbstractButton::clicked (this=0x8a9e500, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#15 0xb5c08269 in QAbstractButtonPrivate::emitClicked (this=0x8c51f38) at /local/git/Qt/qt/src/gui/widgets/qabstractbutton.cpp:550
#16 0xb5c09f04 in QAbstractButtonPrivate::click (this=0x8c51f38) at /local/git/Qt/qt/src/gui/widgets/qabstractbutton.cpp:543
#17 0xb5c0a1b1 in QAbstractButton::mouseReleaseEvent (this=0x8a9e500, e=0xbfc547b4) at /local/git/Qt/qt/src/gui/widgets/qabstractbutton.cpp:1122
#18 0xb58a348f in QWidget::event (this=0x8a9e500, event=0xbfc547b4) at /local/git/Qt/qt/src/gui/kernel/qwidget.cpp:7502
#19 0xb5c080fe in QAbstractButton::event (this=0x8a9e500, e=0x6) at /local/git/Qt/qt/src/gui/widgets/qabstractbutton.cpp:1084
#20 0xb5cb3f5d in QPushButton::event (this=0x8a9e500, e=0xbfc547b4) at /local/git/Qt/qt/src/gui/widgets/qpushbutton.cpp:662
#21 0xb584eafc in QApplicationPrivate::notify_helper (this=0x8075520, receiver=0x8a9e500, e=0xbfc547b4) at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:4053
#22 0xb5856973 in QApplication::notify (this=0xbfc56050, receiver=0x8a9e500, e=0xbfc547b4) at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:3755
#23 0xb69d56cb in KApplication::notify (this=0xbfc56050, receiver=0x8a9e500, event=0xbfc547b4) at /local/svn/kde/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#24 0xb63cb43b in QCoreApplication::notifyInternal (this=0xbfc56050, receiver=0x8a9e500, event=0xbfc547b4) at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:624
#25 0xb585586e in QApplicationPrivate::sendMouseEvent (receiver=0x8a9e500, event=0xbfc547b4, alienWidget=0x8a9e500, nativeWidget=0x865e168, buttonDown=0xb60e1ac0, lastMouseReceiver=...)
    at ../../include/QtCore/../../../../git/Qt/qt/src/corelib/kernel/qcoreapplication.h:216
#26 0xb58c454c in QETWidget::translateMouseEvent (this=0x865e168, event=0xbfc55d10) at /local/git/Qt/qt/src/gui/kernel/qapplication_x11.cpp:4416
#27 0xb58c3a12 in QApplication::x11ProcessEvent (this=0xbfc56050, event=0xbfc55d10) at /local/git/Qt/qt/src/gui/kernel/qapplication_x11.cpp:3435
#28 0xb58edf82 in x11EventSourceDispatch (s=0x8077da0, callback=0, user_data=0x0) at /local/git/Qt/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:146
#29 0xb47d99c8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb47dd083 in ?? () from /usr/lib/libglib-2.0.so.0
#31 0xb47dd241 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0xb63f61fc in QEventDispatcherGlib::processEvents (this=0x8055670, flags=...) at /local/git/Qt/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:327
#33 0xb58ed6b5 in QGuiEventDispatcherGlib::processEvents (this=0x8055670, flags=...) at /local/git/Qt/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:202
#34 0xb63c9a09 in QEventLoop::processEvents (this=0xbfc55fb4, flags=...) at /local/git/Qt/qt/src/corelib/kernel/qeventloop.cpp:149
#35 0xb63c9e5a in QEventLoop::exec (this=0xbfc55fb4, flags=...) at /local/git/Qt/qt/src/corelib/kernel/qeventloop.cpp:201
#36 0xb63cc2ff in QCoreApplication::exec () at /local/git/Qt/qt/src/corelib/kernel/qcoreapplication.cpp:902
#37 0xb584e977 in QApplication::exec () at /local/git/Qt/qt/src/gui/kernel/qapplication.cpp:3522
#38 0x0804b63d in main (argc=1, argv=0xbfc56214) at /local/svn/kde/trunk/KDE/kdepim/kontact/src/main.cpp:218
Comment 2 Matthias Fuchs 2009-06-06 20:00:53 UTC
Here is the translation of the menu options: "Settings", "Configure Kontact ...", "Feeds", "Advanced" and then clicking on "Configure".

Here I can not click "Configure".
Comment 3 Frank Osterfeld 2009-06-27 22:57:11 UTC
SVN commit 988351 by osterfeld:

disable the configure button also if no backends were added, which happens if the page is selected before the akregator
part is loaded, in kontact.
Prevents a crash when clicking the button in this case.
The actual problem is that we cannot list the plugins without loading them (as all the needed info is in the plugins and not their .desktop files),
and we can load them only if the akregatorpart is loaded.

BUG:195482


 M  +3 -1      settings_advanced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=988351
Comment 4 Christophe Marin 2010-10-01 20:21:54 UTC
*** Bug 248341 has been marked as a duplicate of this bug. ***
Comment 5 Martin Karing 2011-04-06 09:04:37 UTC
Created attachment 58618 [details]
New crash information added by DrKonqi

kontact (4.4.9) on KDE Platform 4.6.1 (4.6.1) using Qt 4.7.0

- What I was doing when the application crashed:

Changing backend settings of aggregator while when module was not loaded.

-- Backtrace (Reduced):
#7  Akregator::SettingsAdvanced::slotConfigureStorage (this=0xb76c7e0) at ../../../akregator/configuration/settings_advanced.cpp:83
#8  0xab7cec31 in Akregator::SettingsAdvanced::qt_metacall (this=0xb76c7e0, _c=QMetaObject::InvokeMetaMethod, _id=27, _a=0xbfcd67d8) at ./settings_advanced.moc:76
[...]
#11 0x032f8559 in QAbstractButton::clicked (this=0xb790a68, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#12 0x02fb8539 in QAbstractButtonPrivate::emitClicked (this=0xb76a868) at widgets/qabstractbutton.cpp:546
#13 0x02fb9c34 in QAbstractButtonPrivate::click (this=0xb76a868) at widgets/qabstractbutton.cpp:539