disable the configure button also if no backends were added, which happens if the page is selected before the akregator part is loaded, in kontact. Prevents a crash when clicking the button in this case. The actual problem is that we cannot list the plugins without loading them (as all the needed info is in the plugins and not their .desktop files), and we can load them only if the akregatorpart is loaded.

BUG:195482

svn path=/branches/KDE/4.3/kdepim/; revision=988351